test/compile_errors/err_nonassoc_regex_chain.w
//! expect-check-fail: operator '=~' is non-associative; parenthesize the expression

fn main:
    let text = "abc"
    let _x = text =~ /a/ =~ /b/
